--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 beautifulsoup4==4.12.3
 Django==4.2.13
 django-bootstrap-v5==1.0.11
+djangorestframework==3.15.1
 python-dotenv==1.0.1
 soupsieve==2.5
 sqlparse==0.5.0
